Import of MITHALDU/Dist-Zilla-Plugin-ProgCriticTests-1.101583 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-ProgCriticTests
gitpan-cpan-version:      1.101583
gitpan-cpan-path:         MITHALDU/Dist-Zilla-Plugin-ProgCriticTests-1.101583.tar.gz
gitpan-cpan-author:       MITHALDU
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -34,3 +34,6 @@ copyright_holder    = Christian Walde
 severity = 4
 ;step_size = 1
 exclude = Modules::RequireExplicitPackage ProhibitMatchVars ProhibitCallsToUndeclaredSubs
+
+[MetaNoIndex]
+dir = corpus  
