--- a/META.yml
+++ b/META.yml
@@ -23,12 +23,15 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Dist-Zilla-Plugin-ProgCriticTests
+no_index:
+  directory:
+    - corpus
 requires:
   Dist::Zilla::Plugin::InlineFiles: 0
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
   perl: 5.008
-version: 1.101582
+version: 1.101583
 x_Dist_Zilla:
   plugins:
     -
@@ -143,6 +146,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::ProgCriticTests
       name: ProgCriticTests
       version: 1.101570
+    -
+      class: Dist::Zilla::Plugin::MetaNoIndex
+      name: MetaNoIndex
+      version: 1.101550
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
