--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101580, CPAN::Meta::Converter version 2.101580'
+generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,61 +31,61 @@ requires:
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
   perl: 5.008
-version: 1.101601
+version: 1.102520
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::AutoVersion
       name: AutoVersion
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: GatherDir
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: PruneCruft
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: ManifestSkip
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::AutoPrereq
       name: AutoPrereq
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: MetaYAML
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::License
       name: License
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Readme
       name: Readme
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: PodWeaver
-      version: 3.101530
+      version: 3.101640
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: ExtraTests
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::KwaliteeTests
       name: KwaliteeTests
@@ -93,11 +93,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: CheckChangeLog
@@ -105,27 +105,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: NextRelease
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: MakeMaker
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Manifest
       name: Manifest
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: TestRelease
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: ConfirmRelease
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: UploadToCPAN
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Git/Check'
@@ -145,7 +145,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ProgCriticTests
       name: ProgCriticTests
-      version: 1.101570
+      version: 1.102520
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: MetaNoIndex
@@ -153,21 +153,21 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.101580
+      version: 4.102340
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.101580
+      version: 4.102340
   zilla:
-    class: Dist::Zilla
+    class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.101580
+    version: 4.102340
