Import of MITHALDU/Dist-Zilla-Plugin-ProgCriticTests-1.111730 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-ProgCriticTests
gitpan-cpan-version:      1.111730
gitpan-cpan-path:         MITHALDU/Dist-Zilla-Plugin-ProgCriticTests-1.111730.tar.gz
gitpan-cpan-author:       MITHALDU
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder    = Christian Walde
 [GatherDir]
 [PruneCruft]
 [ManifestSkip]
-[AutoPrereq]
+[AutoPrereqs]
 [MetaYAML]
 [License]
 [Readme]
