--- a/META.yml
+++ b/META.yml
@@ -7,17 +7,15 @@ build_requires:
   Dist::Zilla::Tester: 0
   JSON: 2
   Params::Util: 0
-  Path::Class: 0
   Sub::Exporter: 0
   Test::More: 0.88
-  Test::Perl::Critic::Progressive: 0
   Try::Tiny: 0
   YAML::Tiny: 0
   autodie: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,45 +29,49 @@ requires:
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
   perl: 5.008
-version: 1.111750
+  strict: 0
+  warnings: 0
+version: 1.131250
 x_Dist_Zilla:
+  perl:
+    version: 5.016003
   plugins:
     -
       class: Dist::Zilla::Plugin::AutoVersion
       name: AutoVersion
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: GatherDir
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: PruneCruft
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: ManifestSkip
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: MetaYAML
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::License
       name: License
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Readme
       name: Readme
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: PodWeaver
@@ -77,27 +79,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: ExtraTests
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::KwaliteeTests
       name: KwaliteeTests
-      version: 1.101420
+      version: 2.03
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: CheckChangeLog
@@ -105,69 +107,77 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: NextRelease
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: MakeMaker
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Manifest
       name: Manifest
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: TestRelease
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: ConfirmRelease
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: UploadToCPAN
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Git/Check'
-      version: 1.111590
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Git/Commit'
-      version: 1.111590
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Git/Tag'
-      version: 1.111590
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Git/Push'
-      version: 1.111590
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::ProgCriticTests
       name: ProgCriticTests
-      version: 1.102520
+      version: 1.111750
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: MetaNoIndex
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200004
+      version: 4.300034
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200004
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200004
+      version: 4.300034
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.300034
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.200004
+    version: 4.300034
